flagger+traefik/assets/03-deployment-loadtest.yaml
# https://docs.flagger.app/tutorials/gatewayapi-progressive-delivery
apiVersion: v1
kind: Namespace
metadata:
  name: loadtest
  annotations:
    linkerd.io/inject: enabled
---
# Source: loadtester/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flagger-loadtester
  namespace: loadtest
  labels:
    app.kubernetes.io/name: loadtester
    helm.sh/chart: loadtester-0.24.0
    app.kubernetes.io/instance: flagger-loadtester
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: loadtester
---
# Source: loadtester/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagger-loadtester
  namespace: loadtest
  labels:
    app.kubernetes.io/name: loadtester
    helm.sh/chart: loadtester-0.24.0
    app.kubernetes.io/instance: flagger-loadtester
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadtester
  template:
    metadata:
      labels:
        app: loadtester
        app.kubernetes.io/name: loadtester
      annotations:
        appmesh.k8s.aws/ports: "444"
        openservicemesh.io/inbound-port-exclusion-list: "80, 8080"
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: loadtester
          image: "ghcr.io/fluxcd/flagger-loadtester:0.24.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          command:
            - ./loadtester
            - -port=8080
            - -log-level=info
            - -timeout=1h
            - -namespace-regexp=
          livenessProbe:
            exec:
              command:
                - wget
                - --quiet
                - --tries=1
                - --timeout=4
                - --spider
                - http://localhost:8080/healthz
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - wget
                - --quiet
                - --tries=1
                - --timeout=4
                - --spider
                - http://localhost:8080/healthz
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
