flagger+traefik/assets/05-deployment-demoapp.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: canary-demo
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: canary-demo
  namespace: canary-demo
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: canary-demo
          kind: TraefikService
          port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: rollout-canary
  name: canary-demo
  namespace: canary-demo
spec:
  replicas: 0  # actual replicas handled by canary
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
        - name: rolloutd
          image: argoproj/rollouts-demo:blue
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
